Format changes and fixes
More format and fixes for typos, grammatical, etc

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -81,7 +81,7 @@ Run the following command (depending on your Linux shell and client you may need
 
 <p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Show the Pods for SQL Server</p>
 
-One of the simple methods for High Availability for OpenShift is at the container level. Since SQL Server is the main program in the container, if SQL Server is shutdown or crashes, OpenShift will automatically restart the container in the same pod and node. Run the following commands to see the status of the current pod deployed for the project you created in Module 01.
+One of the simple methods for High Availability for OpenShift is at the container level. Since SQL Server is the main program in the container, if SQL Server is shutdown or crashes, OpenShift will automatically restart the container. In most cases, the container will be started with the same pod on the same node, but OpenShift may schedule the pod on the best node available. Run the following commands to see the status of the current pod deployed for the project you created in Module 01.
 
 `oc get pods -o wide`
 
@@ -301,8 +301,8 @@ Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)
 
 If you are going to proceed and complete Module 05,you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**:
 
-`oc delete project mssql`
-`oc project default`
+`oc delete project mssql`<br>
+`oc project default`<br>
 
 When this completes, you should see the following output and be placed back at the shell prompt:
 
