Bug fixes and more formatting
found a bug in a shell script, bugs in readme files, and did more cleanup and formatting

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -71,7 +71,11 @@ Proceed to the Activity to see examples of how OpenShift provides high availabil
 
 Follow these steps to see how high availability works with SQL Server on OpenShift using replicas, PersistentVolumeClaims, and Load Balancers.
 
-<p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Open a shell prompt and change to the <b>sqlworkshops/SQLonOpenShift/sqlonopenshift/04_ha</b> directory.</p>
+<p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Change directories for the scripts for this module</p>
+
+Run the following command from the shell:
+
+`cd ~/sqlworkshops/SQLonOpenShift/sqlonopenshift/04_ha`
 
 <p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Ensure your scripts are executable</p>
 
@@ -98,7 +102,7 @@ Take note of the pod name (under the **NAME** column), the **IP address**, and t
 
 Run these commands to stop SQL Server. You can also use the script **step1_stop_container.sh**:
 
-`SERVERIP=$(kubectl get service | grep mssql-service | awk {'print $4'})`<br>
+`SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
 `PORT=31433`<br>
 `sqlcmd -Usa -PSql2019isfast -S$SERVERIP,$PORT -Q"SHUTDOWN WITH NOWAIT"`<br>
 
@@ -145,14 +149,7 @@ Run the following commands to take note again of the pod details including name,
 
 `oc get pods -o wide`
 
-Run the following commands to delete the node for the pod for SQL Server container. You can also use the script **step3_pod_failure.sh**. In this example, you can take advantage of the label used to create the SQL Server pod. This was defined in the following yaml fragment from Module 01:
-
-<pre>
-    template:
-      metadata:
-        labels:
-          app: mssql
-</pre>
+Run the following commands to delete the node for the pod for SQL Server container. You can also use the script **step3_pod_failure.sh**:
 
 `oc delete pod -l app=mssql`
 
@@ -163,6 +160,15 @@ pod "mssql-deployment-6d8844988b-j9r84" deleted
 </pre>
 
 and then you are returned to the command prompt.
+
+In this example, you took advantage of the label used to create the SQL Server pod. This was defined in the following yaml fragment from Module 01:
+
+<pre>
+    template:
+      metadata:
+        labels:
+          app: mssql
+</pre>
 
 Now run the command again to see the pod status:
 
@@ -223,9 +229,6 @@ Proceed to the Activity to learn how to update SQL Server but keep your database
 
 In this activity, you will use OpenShift commands to deploy an update to the release of SQL Server with no change to user data and minimize application downtime.
 
-
-<p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Open a shell prompt and change to the <b>sqlworkshops/SQLonOpenShift/sqlonopenshift/04_ha</b> directory</p>
-
 <p><img style="float: left; margin: 0px 15px 15px 0px;" src="../graphics/checkbox.png">Update the SQL Server Version</p>
 
 Execute the following commands to take note of the version of SQL Server. You can also execute the script **step2_test_sql.sh**:
@@ -276,6 +279,12 @@ replicaset.apps/mssql-deployment-6d8844988b   0         0         0         38m
 
 The time it takes to run the new pod and container could be several minutes as the OpenShift cluster may not have the new container image for SQL 2019 CTP 2.3 in its local docker registry. Once the new container is Running, you can connect to SQL Server. Notice also in this output the previous pod is stopped but available to restart, which is part of the process to rollback should you be using a cumulative update strategy.
 
+You can also run the following command to track the details of the update
+
+`oc get event`
+
+Under production scenarios, images for the SQL Server containers would typically already be on the clusters, so the time it takes to bring up the new updated container will normally be far less. You could repeat the exercises in this module after cleanup up resources to see that behavior.
+
 Run the following commands to see the SQL Server version updates. You can also use the script **step2_test_sql.sh**:
 
 `SERVERIP=$(oc get service | grep mssql-service | awk {'print $4'})`<br>
@@ -299,7 +308,7 @@ Developer Edition (64-bit) on Linux (Red Hat Enterprise Linux Server 7.6 (Maipo)
 (1 rows affected)
 </pre>
 
-If you are going to proceed and complete Module 05,you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**:
+If you are going to proceed and complete Module 05, you need to cleanup resources. This can be done by running the following commands. You can also execute the script **step6_cleanup.sh**:
 
 `oc delete project mssql`<br>
 `oc project default`<br>
