formatted the Notes

--- a/SQLonOpenShift/sqlonopenshift/04_HA.md
+++ b/SQLonOpenShift/sqlonopenshift/04_HA.md
@@ -17,7 +17,7 @@ You'll cover the following topics in this Module:
   
 </dl>
 
-**NOTE**: *If at anytime during the Activities of this Module you need to "start over" you can execute the **step6_cleanup.sh** script. Then you will need to complete all the steps in Module 1 and 2 to redeploy the pod and restore the WideWorldImporters database. You do not need to go through the steps in Module 3.*
+>**NOTE**: *If at anytime during the Activities of this Module you need to "start over" you can execute the **step6_cleanup.sh** script. Then you will need to complete all the steps in Module 1 and 2 to redeploy the pod and restore the WideWorldImporters database. You do not need to go through the steps in Module 3.*
 
 <p style="border-bottom: 1px solid lightgrey;"></p>
 
@@ -143,7 +143,7 @@ Depending on how long it takes OpenShift to restart the container, your re-conne
 
 Since you deployed the SQL Server container in a pod using 1 replica, if there is a failure of the pod in a node, OpenShift will attempt to to create a new pod and schedule it on the appropriate available node. For SQL Server, this is like a *failover* since OpenShift will start a new SQL Server container but pointing to the same PersistentVolumeClaim,  hence the same system and user databases. And the LoadBalancer acts like a *listener* so if the new SQL Server container has a new IP address, the application still connects to the same LoadBalancer IP address.
 
-**NOTE**: *Ths is **not** the same as a SQL Server Availability Group which will be discussed in Module 05, Using an Operator with SQL Server on OpenShift.*
+>**NOTE**: *Ths is **not** the same as a SQL Server Availability Group which will be discussed in Module 05, Using an Operator with SQL Server on OpenShift.*
 
 Run the following commands to take note again of the pod details including name, status, IP, and node:
 
@@ -215,7 +215,7 @@ spec:
     type: Recreate
 </pre>
 
-**NOTE**: *SQL Server can be updated from a lower major release to a new one such as SQL Server 2017 to SQL Server 2019. However, you cannot rollback a major version update.*
+>**NOTE**: *SQL Server can be updated from a lower major release to a new one such as SQL Server 2017 to SQL Server 2019. However, you cannot rollback a major version update.*
 
 SQL Server has minor updates called *cumulative updates*. Cumulative updates with a major SQL Server version are compatible to update and rollback. SQL Server releases in preview called Community Technology Preview (CTP) builds are treated like major releases. So you can update for example from SQL Server 2019 CTP 2.2 to 2.3 but you cannot roll back.
 
