--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_04.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_04.ipynb
@@ -28,22 +28,22 @@
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "Starting Spark application\n"
+                    "text": "Starting Spark application\n",
+                    "output_type": "stream"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
                         "text/plain": "<IPython.core.display.HTML object>",
-                        "text/html": "<table>\n<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>0</td><td>application_1556393889616_0001</td><td>pyspark3</td><td>idle</td><td><a target=\"_blank\" href=\"https://104.44.132.63:30443/gateway/default/yarn/proxy/application_1556393889616_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://storage-0-1.storage-0-svc.mssql-cluster.svc.cluster.local:8042/node/containerlogs/container_1556393889616_0001_01_000001/root\">Link</a></td><td>✔</td></tr></table>"
+                        "text/html": "<table>\n<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>0</td><td>application_1559141597513_0001</td><td>pyspark3</td><td>idle</td><td><a target=\"_blank\" href=\"https://52.179.173.86:30443/gateway/default/yarn/proxy/application_1559141597513_0001/\">Link</a></td><td><a target=\"_blank\" href=\"https://52.179.173.86:30443/gateway/default/yarn/container/container_1559141597513_0001_01_000001/root\">Link</a></td><td>✔</td></tr></table>"
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "SparkSession available as 'spark'.\n"
+                    "text": "SparkSession available as 'spark'.\n",
+                    "output_type": "stream"
                 }
             ],
             "execution_count": 3
@@ -61,9 +61,9 @@
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "+-------+--------------------+\n|Item_ID|              Review|\n+-------+--------------------+\n|  72621|Works fine. Easy ...|\n|  89334|great product to ...|\n|  89335|Next time will go...|\n|  84259|Great Gift Great ...|\n|  84398|After trip to Par...|\n|  66434|Simply the best t...|\n|  66501|This is the exact...|\n|  66587|Not super magnet;...|\n|  66680|Installed as bath...|\n|  66694|Our home was buil...|\n+-------+--------------------+"
+                    "text": "+-------+--------------------+\n|Item_ID|              Review|\n+-------+--------------------+\n|  72621|Works fine. Easy ...|\n|  89334|great product to ...|\n|  89335|Next time will go...|\n|  84259|Great Gift Great ...|\n|  84398|After trip to Par...|\n|  66434|Simply the best t...|\n|  66501|This is the exact...|\n|  66587|Not super magnet;...|\n|  66680|Installed as bath...|\n|  66694|Our home was buil...|\n+-------+--------------------+",
+                    "output_type": "stream"
                 }
             ],
             "execution_count": 5
