Update 01-SQL Server Machine Learning Services Architecture.ipynb

--- a/SQLServerMLServices/notebooks/01-SQL Server Machine Learning Services Architecture.ipynb
+++ b/SQLServerMLServices/notebooks/01-SQL Server Machine Learning Services Architecture.ipynb
@@ -46,14 +46,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Configuration option 'external scripts enabled' changed from 1 to 1. Run the RECONFIGURE statement to install."
+                        "text/html": "Configuration option 'external scripts enabled' changed from 0 to 1. Run the RECONFIGURE statement to install."
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.1646442"
+                        "text/html": "Total execution time: 00:00:00.1829170"
                     },
                     "metadata": {}
                 }
@@ -73,7 +73,7 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "STDOUT message(s) from external script: \nMKL_VERBOSE Intel(R) MKL 2017.0 Product build 20160801 for Intel(R) 64 architecture Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2) enabled processors, Lnx 2.00GHz lp64 gnu_thread NMICDev:0\nMKL_VERBOSE DGEMV(N,28,4,0x7ffea971bd50,0x2667fd8,28,0x285d8e0,1,0x7ffea971bd48,0x2668388,1) 93.24us CNR:AUTO Dyn:1 FastMM:1 TID:0  NThr:8 WDiv:HOST:+0.000\nMKL_VERBOSE DGEMV(N,27,4,0x7ffea971bd50,0x1ed7238,27,0x20af088,1,0x7ffea971bd48,0x1e9d438,1) 21.72us CNR:AUTO Dyn:1 FastMM:1 TID:0  NThr:8 WDiv:HOST:+0.000\nNULL"
+                        "text/html": "STDOUT message(s) from external script: \nNULL"
                     },
                     "metadata": {}
                 },
@@ -87,12 +87,13 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:02.2699094"
+                        "text/html": "Total execution time: 00:00:13.9017060"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
+                    "metadata": {},
                     "execution_count": 2,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -110,8 +111,7 @@
                             ]
                         },
                         "text/html": "<table><tr><th>Is R Working</th></tr><tr><td>1</td></tr></table>"
-                    },
-                    "metadata": {}
+                    }
                 }
             ],
             "execution_count": 2
@@ -131,12 +131,13 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:02.0991158"
+                        "text/html": "Total execution time: 00:00:25.6722360"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
+                    "metadata": {},
                     "execution_count": 3,
                     "data": {
                         "application/vnd.dataresource+json": {
@@ -154,8 +155,7 @@
                             ]
                         },
                         "text/html": "<table><tr><th>Is Python Working</th></tr><tr><td>1</td></tr></table>"
-                    },
-                    "metadata": {}
+                    }
                 }
             ],
             "execution_count": 3
