Assets revised through Module 01 to CTP 3.1 - Assets through Module 06  to go

--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_02.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_02.ipynb
@@ -20,7 +20,7 @@
         },
         {
             "cell_type": "code",
-            "source": "/* Create External File Format */\r\n\r\nUSE WideWorldImporters;\r\nGO\r\n\r\nIF NOT EXISTS(SELECT * FROM sys.external_file_formats WHERE name = 'csv_file')\r\nBEGIN\r\n    CREATE EXTERNAL FILE FORMAT csv_file\r\n    WITH (\r\n        FORMAT_TYPE = DELIMITEDTEXT,\r\n        FORMAT_OPTIONS(\r\n            FIELD_TERMINATOR = ',',\r\n            STRING_DELIMITER = '0x22',\r\n            FIRST_ROW = 2,\r\n            USE_TYPE_DEFAULT = TRUE)\r\n    );\r\nEND",
+            "source": "/* Clean up only - run this cell only if you are repeating the tutorial! */\r\nUSE WideWorldImporters;\r\nGO\r\n\r\nDROP EXTERNAL TABLE partner_customers_hdfs\r\nDROP EXTERNAL FILE FORMAT csv_file\r\nDROP EXTERNAL DATA SOURCE SqlStoragePool\r\n",
             "metadata": {},
             "outputs": [
                 {
@@ -33,7 +33,29 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0464380"
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.179"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 0
+        },
+        {
+            "cell_type": "code",
+            "source": "/* Create External File Format */\r\n\r\nUSE WideWorldImporters;\r\nGO\r\n\r\nCREATE EXTERNAL FILE FORMAT csv_file\r\nWITH (\r\n    FORMAT_TYPE = DELIMITEDTEXT,\r\n    FORMAT_OPTIONS(\r\n        FIELD_TERMINATOR = ',',\r\n        STRING_DELIMITER = '0x22',\r\n        FIRST_ROW = 2,\r\n        USE_TYPE_DEFAULT = TRUE)\r\n);\r\nGO",
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
                     },
                     "metadata": {}
                 },
@@ -47,56 +69,56 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0458440"
+                        "text/html": "Total execution time: 00:00:00.257"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 1
+        },
+        {
+            "cell_type": "code",
+            "source": "/* Create External Data Source to the Storage Pool */\r\nCREATE EXTERNAL DATA SOURCE SqlStoragePool\r\nWITH (LOCATION = 'sqlhdfs://controller-svc/default');",
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.129"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 2
+        },
+        {
+            "cell_type": "code",
+            "source": "/* Create an External Table that can read from the Storage Pool File Location */\r\nCREATE EXTERNAL TABLE [partner_customers_hdfs]\r\n    (\"CustomerSource\" VARCHAR(250) \r\n    , \"CustomerName\" VARCHAR(250) \r\n    , \"EmailAddress\" VARCHAR(250))\r\n    WITH\r\n    (\r\n        DATA_SOURCE = SqlStoragePool,\r\n        LOCATION = '/partner_customers',\r\n        FILE_FORMAT = csv_file\r\n    );\r\nGO",
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.662"
                     },
                     "metadata": {}
                 }
             ],
             "execution_count": 3
-        },
-        {
-            "cell_type": "code",
-            "source": "/* Create External Data Source to the Storage Pool */\r\n\r\n IF NOT EXISTS(SELECT * FROM sys.external_data_sources WHERE name = 'SqlStoragePool')\r\n      CREATE EXTERNAL DATA SOURCE SqlStoragePool\r\n      WITH (LOCATION = 'sqlhdfs://controller-svc:8080/default');",
-            "metadata": {},
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.0460970"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 4
-        },
-        {
-            "cell_type": "code",
-            "source": "/* Create an External Table that can read from the Storage Pool File Location */\r\nIF NOT EXISTS(SELECT * FROM sys.external_tables WHERE name = 'partner_customers_hdfs')\r\nBEGIN\r\n    CREATE EXTERNAL TABLE [partner_customers_hdfs]\r\n    (\"CustomerSource\" VARCHAR(250) \r\n    , \"CustomerName\" VARCHAR(250) \r\n    , \"EmailAddress\" VARCHAR(250))\r\n    WITH\r\n    (\r\n        DATA_SOURCE = SqlStoragePool,\r\n        LOCATION = '/partner_customers',\r\n        FILE_FORMAT = csv_file\r\n    );\r\nEND",
-            "metadata": {},
-            "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Commands completed successfully."
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.5022630"
-                    },
-                    "metadata": {}
-                }
-            ],
-            "execution_count": 5
         },
         {
             "cell_type": "code",
@@ -113,14 +135,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:02.4283920"
+                        "text/html": "Total execution time: 00:00:00.699"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 6,
+                    "execution_count": 5,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -193,7 +215,7 @@
                     }
                 }
             ],
-            "execution_count": 6
+            "execution_count": 5
         },
         {
             "cell_type": "code",
@@ -210,13 +232,6 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.1279350"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
                         "text/html": "(10 rows affected)"
                     },
                     "metadata": {}
@@ -224,14 +239,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:02.1438840"
+                        "text/html": "Total execution time: 00:00:00.661"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 7,
+                    "execution_count": 6,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -291,7 +306,7 @@
                     }
                 }
             ],
-            "execution_count": 7
+            "execution_count": 6
         },
         {
             "cell_type": "markdown",
