--- a/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_03.ipynb
+++ b/sqlserver2019bigdataclusters/SQL2019BDC/notebooks/bdc_tutorial_03.ipynb
@@ -20,7 +20,7 @@
         },
         {
             "cell_type": "code",
-            "source": "USE WideWorldImporters;\r\nGO\r\n\r\n  IF NOT EXISTS(SELECT * FROM sys.external_data_sources WHERE name = 'SqlDataPool')\r\n      CREATE EXTERNAL DATA SOURCE SqlDataPool\r\n      WITH (LOCATION = 'sqldatapool://controller-svc:8080/datapools/default');",
+            "source": "USE WideWorldImporters;\r\nGO\r\n\r\nCREATE EXTERNAL DATA SOURCE SqlDataPool\r\nWITH (LOCATION = 'sqldatapool://controller-svc/default');",
             "metadata": {},
             "outputs": [
                 {
@@ -33,13 +33,6 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0451090"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
                         "text/html": "Commands completed successfully."
                     },
                     "metadata": {}
@@ -47,12 +40,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0503210"
+                        "text/html": "Total execution time: 00:00:00.166"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 1
+            "execution_count": 3
         },
         {
             "cell_type": "code",
@@ -69,12 +62,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:05.4046830"
+                        "text/html": "Total execution time: 00:00:08.849"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 2
+            "execution_count": 4
         },
         {
             "cell_type": "code",
@@ -91,12 +84,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.0458750"
+                        "text/html": "Total execution time: 00:00:00.223"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 4
+            "execution_count": 5
         },
         {
             "cell_type": "code",
@@ -113,12 +106,12 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:52.5210020"
+                        "text/html": "Total execution time: 00:00:42.670"
                     },
                     "metadata": {}
                 }
             ],
-            "execution_count": 5
+            "execution_count": 6
         },
         {
             "cell_type": "code",
@@ -142,14 +135,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:04.1182450"
+                        "text/html": "Total execution time: 00:00:00.843"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 6,
+                    "execution_count": 7,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -171,7 +164,7 @@
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 6,
+                    "execution_count": 7,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -198,92 +191,92 @@
                             },
                             "data": [
                                 {
-                                    "0": "37838",
-                                    "1": "17302",
+                                    "0": "37775",
+                                    "1": "35460",
                                     "2": "NULL",
-                                    "3": "6101",
-                                    "4": "4",
+                                    "3": "7394",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "12379",
+                                    "0": "37775",
+                                    "1": "12155",
                                     "2": "NULL",
-                                    "3": "15071",
-                                    "4": "4",
+                                    "3": "13157",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "52794",
+                                    "0": "37775",
+                                    "1": "4880",
                                     "2": "NULL",
-                                    "3": "8581",
-                                    "4": "4",
+                                    "3": "13098",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "56192",
+                                    "0": "37775",
+                                    "1": "36272",
                                     "2": "NULL",
-                                    "3": "6950",
-                                    "4": "4",
+                                    "3": "6851",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "9679",
+                                    "0": "37775",
+                                    "1": "24922",
                                     "2": "NULL",
-                                    "3": "9161",
-                                    "4": "4",
+                                    "3": "5198",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "79477",
+                                    "0": "37776",
+                                    "1": "74100",
                                     "2": "NULL",
-                                    "3": "7446",
-                                    "4": "4",
+                                    "3": "16015",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "42948",
+                                    "0": "37776",
+                                    "1": "26833",
                                     "2": "NULL",
-                                    "3": "585",
-                                    "4": "4",
+                                    "3": "12921",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "46974",
+                                    "0": "37776",
+                                    "1": "72943",
                                     "2": "NULL",
-                                    "3": "11845",
-                                    "4": "4",
+                                    "3": "5015",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "61655",
+                                    "0": "37776",
+                                    "1": "9387",
                                     "2": "NULL",
-                                    "3": "11210",
-                                    "4": "4",
+                                    "3": "12274",
+                                    "4": "53",
                                     "5": "NULL"
                                 },
                                 {
-                                    "0": "37838",
-                                    "1": "30273",
+                                    "0": "37776",
+                                    "1": "32557",
                                     "2": "NULL",
-                                    "3": "1768",
-                                    "4": "4",
+                                    "3": "11344",
+                                    "4": "53",
                                     "5": "NULL"
                                 }
                             ]
                         },
-                        "text/html": "<table><tr><th>wcs_click_date_sk</th><th>wcs_click_time_sk</th><th>wcs_sales_sk</th><th>wcs_item_sk</th><th>wcs_web_page_sk</th><th>wcs_user_sk</th></tr><tr><td>37838</td><td>17302</td><td>NULL</td><td>6101</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>12379</td><td>NULL</td><td>15071</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>52794</td><td>NULL</td><td>8581</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>56192</td><td>NULL</td><td>6950</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>9679</td><td>NULL</td><td>9161</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>79477</td><td>NULL</td><td>7446</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>42948</td><td>NULL</td><td>585</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>46974</td><td>NULL</td><td>11845</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>61655</td><td>NULL</td><td>11210</td><td>4</td><td>NULL</td></tr><tr><td>37838</td><td>30273</td><td>NULL</td><td>1768</td><td>4</td><td>NULL</td></tr></table>"
+                        "text/html": "<table><tr><th>wcs_click_date_sk</th><th>wcs_click_time_sk</th><th>wcs_sales_sk</th><th>wcs_item_sk</th><th>wcs_web_page_sk</th><th>wcs_user_sk</th></tr><tr><td>37775</td><td>35460</td><td>NULL</td><td>7394</td><td>53</td><td>NULL</td></tr><tr><td>37775</td><td>12155</td><td>NULL</td><td>13157</td><td>53</td><td>NULL</td></tr><tr><td>37775</td><td>4880</td><td>NULL</td><td>13098</td><td>53</td><td>NULL</td></tr><tr><td>37775</td><td>36272</td><td>NULL</td><td>6851</td><td>53</td><td>NULL</td></tr><tr><td>37775</td><td>24922</td><td>NULL</td><td>5198</td><td>53</td><td>NULL</td></tr><tr><td>37776</td><td>74100</td><td>NULL</td><td>16015</td><td>53</td><td>NULL</td></tr><tr><td>37776</td><td>26833</td><td>NULL</td><td>12921</td><td>53</td><td>NULL</td></tr><tr><td>37776</td><td>72943</td><td>NULL</td><td>5015</td><td>53</td><td>NULL</td></tr><tr><td>37776</td><td>9387</td><td>NULL</td><td>12274</td><td>53</td><td>NULL</td></tr><tr><td>37776</td><td>32557</td><td>NULL</td><td>11344</td><td>53</td><td>NULL</td></tr></table>"
                     }
                 }
             ],
-            "execution_count": 13
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
